[project]
name = "smsflow"
version = "0.1.0"
description = "Python client library for the SMSFlow HTTPS API."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "SMSFlow" }]
dependencies = ["requests>=2.31.0"]
keywords = ["sms", "sms-api", "smsflow", "notifications"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
